# territoria

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/: dependabot.yml
