[project]
name = "territoria"
version = "0.1.0"
description = "Project for Streamlit dashboard"
license = "Proprietary"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Juan Pablo Cadena Aguilar", email = "jpcadena@espol.edu.ec" },
]
maintainers = [
    { name = "Juan Pablo Cadena Aguilar", email = "jpcadena@espol.edu.ec" },
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "requests>=2.34.0",
    "streamlit>=1.57.0",
]

[project.urls]
Homepage = "https://www.github.com/jpcadena/territoria"
Repository = "https://www.github.com/jpcadena/territoria"
Documentation = "https://www.github.com/jpcadena/territoria/README.md"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "codespell>=2.4.2",
    "commitizen>=4.16.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]
test = [
    "coverage>=7.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.codespell]
ignore-words-list = "sav,SAV,FOTO"
skip = './.venv,./venv,./.ruff_cache,./.mypy_cache,./.pytest_cache'
count = true
quiet-level = 3

[tool.commitizen]
version_files = ["pyproject.toml:version"]
version_scheme = "pep440"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_start_rev = "v1.0.0"
annotated_tag = true
style = [
    [
        "qmark",
        "fg:#ff9d00 bold",
    ],
    [
        "question",
        "bold",
    ],
    [
        "answer",
        "fg:#ff9d00 bold",
    ],
    [
        "pointer",
        "fg:#ff9d00 bold",
    ],
    [
        "highlighted",
        "fg:#ff9d00 bold",
    ],
    [
        "selected",
        "fg:#cc5454",
    ],
    [
        "separator",
        "fg:#cc5454",
    ],
    [
        "instruction",
        "",
    ],
    [
        "text",
        "",
    ],
    [
        "disabled",
        "fg:#858585 italic",
    ],
]

[tool.commitizen.customize]
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
example = "feat: Added support for customized commitizen configuration"
schema = "<type>: <body>"
schema_pattern = "(feat|fix|refactor|perf|docs|test|ci|build|chore|revert):(\\s.*)"
bump_pattern = "^(BREAK|feat|fix|hotfix)"
bump_map = { "BREAK" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "hotfix" = "PATCH" }
change_type_order = [
    "BREAKING CHANGE",
    "feat",
    "fix",
    "refactor",
    "perf",
    "docs",
]
info_path = "cz_customize_info.txt"
info = """
This is a customized commitizen configuration enforcing structured commit messages.
"""
commit_parser = "^(?P<change_type>feat|fix|refactor|perf|docs|test|ci|build|chore|revert):\\s(?P<message>.*)?"
changelog_pattern = "^(feat|fix|refactor|perf|docs|test|ci|build|chore|revert)?(!)?"
change_type_map = { "feat" = "Features", "fix" = "Bug Fixes", "refactor" = "Code Refactoring", "perf" = "Performance Improvements", "docs" = "Documentation", "test" = "Testing", "ci" = "Continuous Integration", "build" = "Build System", "chore" = "Chores", "revert" = "Reverts" }

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
choices = [
    { value = "feat", name = "feat: A new feature." },
    { value = "fix", name = "fix: A bug fix." },
    { value = "refactor", name = "refactor: Code changes that do not fix a bug or add a feature." },
    { value = "perf", name = "perf: Performance improvements." },
    { value = "docs", name = "docs: Documentation improvements." },
    { value = "test", name = "test: Adding or modifying tests." },
    { value = "ci", name = "ci: CI/CD configuration updates." },
    { value = "build", name = "build: Changes affecting build scripts or dependencies." },
    { value = "chore", name = "chore: Minor or maintenance changes." },
    { value = "revert", name = "revert: Reverting a previous commit." },
]
message = "Select the type of change you are committing"

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Write a short commit message"

[[tool.commitizen.customize.questions]]
type = "confirm"
name = "show_message"
message = "Do you want to add a detailed body message in commit?"

[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "tests",
]
skips = ["B101", "B601", "B201"]
tests = ["B301"]

[tool.mypy]
exclude = '''
(
    /(\.venv
  | \.mypy_cache
  | \.ruff_cache
  | \.pytest_cache
  | venv
  | tests)/
)
'''
follow_imports = "normal"
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
strict = true
show_error_context = true
show_error_codes = true
pretty = true
show_traceback = true
raise_exceptions = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
fix = true
force-exclude = true
output-format = "grouped"
show-fixes = true
line-length = 80

[tool.ruff.analyze]
detect-string-imports = true

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 72
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long, handled by ruff formatter
    "B008", # do not perform function calls in argument defaults
    "B904", # Allow raising exceptions without from e, for HTTPException
]
exclude = ["venv", ".venv", ".mypy_cache", ".ruff_cache", ".pytest_cache"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
detect-same-package = false
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"                   # numpy, pep257, etc.
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__tablename__", "__table_args__"] # PLW3201
max-args = 5
max-bool-expr = 4
max-returns = 5

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = [
    "-rxXs",             # Display extra info for test failures
    "-vv",
    "--strict-config",   # Enforce strict pytest configuration
    "--strict-markers",  # Enforce strict markers
    "--ignore=docs_src", # Ignore the 'docs_src' directory
    "--cov=src",
    "--durations=10",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestDeprecationWarning:pytest_cov",
]
junit_duration_report = "call"
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false
log_auto_indent = true
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(level)s] %(message)s"
log_cli_level = "INFO"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest-logs.txt"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(level)s] %(message)s"
log_file_level = "INFO"
log_format = "%(asctime)s [%(level)s] %(message)s"
log_level = "INFO"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
minversion = "9.0"
norecursedirs = [".svn", "_build", "tmp*", "node_modules", "venv", ".venv"]
python_classes = ["*TestSuite"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*", "*_test"]
pythonpath = ["src"]
required_plugins = ["pytest-cov", "pytest-asyncio"]
testpaths = ["tests"]
verbosity_assertions = "2"
verbosity_test_cases = "2"

[tool.coverage.run]
branch = true
concurrency = ["thread", "multiprocessing"]
context = "."
data_file = "coverage/.coverage"
disable_warnings = ["module-not-imported"]
dynamic_context = "test_function"
omit = [
    "tests/*",
    ".ruff_cache/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    "cache/*",
    ".venv/*",
    "venv/*",
]
parallel = true
source = ["src"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if TYPE_CHECKING:",
    "@typing.overload",
    "if __name__ == .__main__.:",
]
fail_under = 90.0
ignore_errors = true
show_missing = true
skip_covered = true
skip_empty = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true

[tool.coverage.paths]
source = ["."]
